--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="icon" type="image/png" href="img/techis-logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -29,6 +30,44 @@
           </div>
         </div>
       </nav>
+      <div id="about">
+          <h3><span class="font-primary">A</span>bout</h3>
+          <img src="img/cs1.png" alt="">
+          <div class="name">Syed Amer Khadri</div>
+          <div class="vocation">Web Developer</div>
+          <div class="skills">HTML / CSS / Python / Django / Javascript / React.js / Redux / SQL / AWS(Basics) </div>
+          <p>Introduction about myself shoulbe be placed here later on .Please do remember</p>
+          <div class="email.com">syedamerkhadri@gmail.com</div>
+          <div class="icons">
+              <a href="#"><i class="bi bi-github"></i></a>
+              <a href="#"><i class="bi bi-linkedin mx-3"></i></a>
+          </div>
+        </div>
+        <div id="projects">
+            <h3><span class="font-primary">P</span>rojects</h3>
+
+            <div class="card mb-3">
+                <div class="row">
+                  <div class="col-md-4">
+                    <img src="img/cs1.png"  alt="Twitter">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Twitter Clone</h5>
+                      <p class="card-text">This is a twitter clone project was developed using HTML, CSS, Python, Django.</p>
+                      <p class="card-text"><small class="text-muted">
+                          Test Login Account <br>
+                          Email : test@exmaple.com <br>
+                          password : test12345 
+                    </small></p>
+                    <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                    <a href="#" target="_blank"class="btn btn-secondary">Github Link</a>   
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> 
 </body>
 </html>
