Updated two projects

--- a/index.html
+++ b/index.html
@@ -35,33 +35,85 @@
           <img src="img/cs1.png" alt="">
           <div class="name">Syed Amer Khadri</div>
           <div class="vocation">Web Developer</div>
-          <div class="skills">HTML / CSS / Python / Django / Javascript / React.js / Redux / SQL / AWS(Basics) </div>
+          <div class="skills">HTML / CSS / Python / Django / Javascript / React.js / Redux / SQL </div>
           <p>Introduction about myself shoulbe be placed here later on .Please do remember</p>
-          <div class="email.com">syedamerkhadri@gmail.com</div>
+          <div class="email.com">syedamer2426@gmail.com</div>
           <div class="icons">
-              <a href="#"><i class="bi bi-github"></i></a>
-              <a href="#"><i class="bi bi-linkedin mx-3"></i></a>
+              <a href="https://github.com/syedamerkhadri"><i class="bi bi-github"></i></a>
+              <a href="https://www.linkedin.com/in/syed-amer-khadri-25335b206/"><i class="bi bi-linkedin mx-3"></i></a>
           </div>
         </div>
         <div id="projects">
             <h3><span class="font-primary">P</span>rojects</h3>
-
             <div class="card mb-3">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="img/cs1.png"  alt="Twitter">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Synamatic</h5>
+                    <p class="card-text">This is a Netflix-inspired project where you can see ratings for newly released and upcoming movies, with links included to check out the trailers to the movies you're interested in. In this project you will find a categories directory, search functionality, and the ability to save your favorites as well as movies you have yet to see.
+                      <br> <br><strong>Skills Used:</strong> Frontend built in React and Redux,Backend built in Django API 
+                    </p>
+    
+                  <a href="https://frontend-moviereview.herokuapp.com//" target="_blank" class="btn btn-secondary">Website Link</a>
+                  <a href="https://github.com/synamatic-project/Synamatic" target="_blank"class="btn btn-secondary">Github Link</a>   
+                  </div>
+                </div>
+              </div>
+            </div>
+              <div class="card mb-3">
                 <div class="row">
                   <div class="col-md-4">
-                    <img src="img/cs1.png"  alt="Twitter">
+                    <video id="video" autoplay muted controls>
+                      <source src="video/E-commerce website.MP4" type="video/mp4" />
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">E-commerce Pizza Website</h5>
+                      <p class="card-text"><strong>Description:</strong>This is a mini e-commerce project where you can buy the pizza with a simple click of the add button. When a customer is getting bored they don't need to hold a menu card to order anything they can just open the application and order from their mobile. It will lead to social distancing and as in this scenario,where many types of diseases are spreading it will help us to stay away from them.
+                        In this pizza corner you can buy the tastiest pizza.
+                        Here you can select the pizza , in which you will get the offer buy 3 get 2 free.
+                        <br> <br> <strong>Technologies Used:</strong> Html, CSS, Bootstrap, Javascript / JQuery, Django, Cloudinary (To host uploaded images on CDN), Heroku.
+                      </p>
+                      <p class="card-text"><small class="text-muted">
+                          Test Login Account<br>
+                          Email: testing@gmail.com <br>
+                          Password: testing
+                    </small></p>
+                    <a href="https://ecommerce-frontend-restaurant.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
+                    <a href="https://github.com/syedamerkhadri/Ecommerce-Website" target="_blank"class="btn btn-secondary">Github Link</a>   
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-3">
+                <div class="row">
+                  <div class="col-md-4">
+                    <video id="video" autoplay muted controls>
+                      <source src="video/twitter clone.MP4" type="video/mp4" />
+                      Your browser does not support the video tag.
+                    </video>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">Twitter Clone</h5>
-                      <p class="card-text">This is a twitter clone project was developed using HTML, CSS, Python, Django.</p>
-                      <p class="card-text"><small class="text-muted">
-                          Test Login Account <br>
-                          Email : test@exmaple.com <br>
-                          password : test12345 
-                    </small></p>
-                    <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                    <a href="#" target="_blank"class="btn btn-secondary">Github Link</a>   
+                      <p class="card-text"><strong>Description:</strong> Users can post tweets and see everyone's in our app. To keep the 
+                        project simple, we did not include a sign-up/login functionality. But you can learn CRUD(Create/Read/Update/Delete) through this project.
+
+                        <br>
+                        With this project, we created a platform where you can express your
+thoughts anonymously, showcase your pictures, and much more on a
+single website. Post, edit, or delete posts at the convenience of just a few
+touches. This project is based on Twitter and anonymity adds to its special
+features. Without the necessity of an account,
+                        <br> <br><strong>Technologies Used:</strong> Html, CSS, Bootstrap, Javascript / JQuery, Django, Cloudinary (To host uploaded images on CDN), Heroku.
+                      </p>
+                    <a href="https://twitter-clone-syed.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
+                    <a href="https://github.com/syedamerkhadri/Twitter-Clone" target="_blank"class="btn btn-secondary">Github Link</a>   
                     </div>
                   </div>
                 </div>
