Updated two projects

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                       <br> <br><strong>Skills Used:</strong> Frontend built in React and Redux,Backend built in Django API 
                     </p>
     
-                  <a href="https://frontend-moviereview.herokuapp.com//" target="_blank" class="btn btn-secondary">Website Link</a>
+                  <a href="https://frontend-moviereview.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
                   <a href="https://github.com/synamatic-project/Synamatic" target="_blank"class="btn btn-secondary">Github Link</a>   
                   </div>
                 </div>
