--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </nav>
       <div id="about">
           <h3><span class="font-primary">A</span>bout</h3>
-          <img src="img/cs1.png" alt="">
+          <img src="img/cs2.jpg" alt="">
           <div class="name">Syed Amer Khadri</div>
           <div class="vocation">Web Developer</div>
           <div class="skills">HTML / CSS / Python / Django / Javascript / React.js / Redux / SQL </div>
@@ -48,16 +48,19 @@
             <div class="card mb-3">
               <div class="row">
                 <div class="col-md-4">
-                  <img src="img/cs1.png"  alt="Twitter">
+                  <video id="video" autoplay muted controls>
+                    <source src="video/project-symantic.mp4" type="video/mp4" />
+                    Your browser does not support the video tag.
+                  </video>
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
                     <h5 class="card-title">Synamatic</h5>
-                    <p class="card-text">This is a Netflix-inspired project where you can see ratings for newly released and upcoming movies, with links included to check out the trailers to the movies you're interested in. In this project you will find a categories directory, search functionality, and the ability to save your favorites as well as movies you have yet to see.
+                    <p class="card-text"><strong>Project Description:</strong> is a Netflix-inspired project where you can see ratings for newly released and upcoming movies, with links included to check out the trailers to the movies you're interested in. In this project you will find a categories directory, search functionality, and the ability to save your favorites as well as movies you have yet to see.
                       <br> <br><strong>Skills Used:</strong> Frontend built in React and Redux,Backend built in Django API 
                     </p>
     
-                  <a href="https://frontend-moviereview.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
+                  <a href="https://frontend-synamatic.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
                   <a href="https://github.com/synamatic-project/Synamatic" target="_blank"class="btn btn-secondary">Github Link</a>   
                   </div>
                 </div>
@@ -74,7 +77,7 @@
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">E-commerce Pizza Website</h5>
-                      <p class="card-text"><strong>Description:</strong>This is a mini e-commerce project where you can buy the pizza with a simple click of the add button. When a customer is getting bored they don't need to hold a menu card to order anything they can just open the application and order from their mobile. It will lead to social distancing and as in this scenario,where many types of diseases are spreading it will help us to stay away from them.
+                      <p class="card-text"><strong>Project Description:</strong>This is a mini e-commerce project where you can buy the pizza with a simple click of the add button. When a customer is getting bored they don't need to hold a menu card to order anything they can just open the application and order from their mobile. It will lead to social distancing and as in this scenario,where many types of diseases are spreading it will help us to stay away from them.
                         In this pizza corner you can buy the tastiest pizza.
                         Here you can select the pizza , in which you will get the offer buy 3 get 2 free.
                         <br> <br> <strong>Technologies Used:</strong> Html, CSS, Bootstrap, Javascript / JQuery, Django, Cloudinary (To host uploaded images on CDN), Heroku.
@@ -101,7 +104,7 @@
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">Twitter Clone</h5>
-                      <p class="card-text"><strong>Description:</strong> Users can post tweets and see everyone's in our app. To keep the 
+                      <p class="card-text"><strong>Project Description:</strong> Users can post tweets and see everyone's in our app. To keep the 
                         project simple, we did not include a sign-up/login functionality. But you can learn CRUD(Create/Read/Update/Delete) through this project.
 
                         <br>
