--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <div class="name">Syed Amer Khadri</div>
           <div class="vocation">Web Developer</div>
           <div class="skills">HTML / CSS / Python / Django / Javascript / React.js / Redux / SQL </div>
-          <p>Introduction about myself shoulbe be placed here later on .Please do remember</p>
+          <p>
+           I am a Full Stack Web Developer based in Ypsilanti, MI. I am always eager to learn new languages and gain new skills so that I can continue to grow as a working professional and apply what I have learned to new projects and applications. 
+            I look forward to collaborating with a team of creative, like-minded professionals and implementing my skills in a workplace setting.</p>
           <div class="email.com">syedamer2426@gmail.com</div>
           <div class="icons">
               <a href="https://github.com/syedamerkhadri"><i class="bi bi-github"></i></a>
@@ -56,7 +58,9 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <h5 class="card-title">Synamatic</h5>
-                    <p class="card-text"><strong>Project Description:</strong> is a Netflix-inspired project where you can see ratings for newly released and upcoming movies, with links included to check out the trailers to the movies you're interested in. In this project you will find a categories directory, search functionality, and the ability to save your favorites as well as movies you have yet to see.
+                    <p class="card-text"><strong>Project Description:</strong> is a Netflix-inspired project where you can see ratings for newly released and upcoming movies,
+                       with links included to check out the trailers to the movies you're interested in. In this project you will find a categories directory, 
+                       search functionality, and the ability to save your favorites as well as movies you have yet to see.
                       <br> <br><strong>Skills Used:</strong> Frontend built in React and Redux,Backend built in Django API 
                     </p>
     
@@ -77,9 +81,8 @@
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">E-commerce Pizza Website</h5>
-                      <p class="card-text"><strong>Project Description:</strong>This is a mini e-commerce project where you can buy the pizza with a simple click of the add button. When a customer is getting bored they don't need to hold a menu card to order anything they can just open the application and order from their mobile. It will lead to social distancing and as in this scenario,where many types of diseases are spreading it will help us to stay away from them.
-                        In this pizza corner you can buy the tastiest pizza.
-                        Here you can select the pizza , in which you will get the offer buy 3 get 2 free.
+                      <p class="card-text"><strong>Project Description:</strong>This is a mini e-commerce project with a sign up and sign in functionality. You can order a Pizza with a 
+                        simple click and the item gets added to the Cart. In the checkout page you can enter all the address details and place the order.  
                         <br> <br> <strong>Technologies Used:</strong> Html, CSS, Bootstrap, Javascript / JQuery, Django, Cloudinary (To host uploaded images on CDN), Heroku.
                       </p>
                       <p class="card-text"><small class="text-muted">
